2001-10-16 Daniel Steffen <das@users.sourceforge.net>

	* unix/Makefile.in:
	* unix/configure.in:
	* unix/tcl.m4: Added support for MacOSX / Darwin

	* unix/mkLinks:
	* unix/mkLinks.tcl: Added check for case-insensitive
	  filesystems and conditionalized links that only differ by
	  case (needed for MacOSX/Darwin on HFS+ FS)

	* unix/tclLoadDyld.c: change in binary extension format from 
	  MachO bundles to standard .dylib dynamic libraries like on
	  other unices. **POTENTIAL INCOMPATIBILITY*** extensions
	  will have to be recompiled as .dylib's. 
	  Improved error handling and use of DStrings and 
	  Tcl_UtfToExternalDString instead of sprintf to build up
	  symbol and library names. [Patch 435258]

2001-10-16  Don Porter	<dgp@users.sourceforge.net>

	* tests/trace.test (trace-18.1): Added test to demonstrate
	  memory corruption problems.  [Bug 219393].

2001-10-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* generic/tclInt.decls (TclExpandCodeArray,TclGetInstructionTable):
	  Added to internal stubs table. Tclcompiler (Tclpro project)
	  needs them if used as loadable package under Windows. Changed
	  signatures. We don't want to describe compiler internal
	  structures in "tclInt.h".

	* generic/tclCompile.h: S.a. Removed function declarations.
	* generic/tclCompile.c: S.a. Adapted to changed signatures.

2001-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: 
	* unix/configure.in: 
	* win/configure: 
	* win/configure.in: 
	* win/tcl.m4: reworked to be a little cleaner in comparison to
	each other, and to AC_SUBST even empty vars for win/tclConfig.sh

	* generic/tcl.h: 
	* win/tclWinPort.h: moved #define of WIN32 to tcl.h where __WIN32__
	is defined and added #ifndef check.

2001-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/winPipe.test: removed obsolete cat16 tests, fixed
	winpipe-1.22 to only run on Win9*.

	* tests/timer.test: slight skewing of after values to allow for
	correct results on burdened machines.
